longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
  labels:
    app.kubernetes.io/name: longhorn
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: kong
  rules:
    - host: ""
      http:
        paths:
          - path: /longhorn/
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  name: "http"
